--- a/English Books.html
+++ b/English Books.html
@@ -50,8 +50,8 @@
 						<!-- Two -->
 							<section id="two">
 								<div data-role="main" class="ui-content">
-									<ul data-role="listview" data-filter="true" data-filter-reveal="true">
-										<li><a href="Place the drive link here">PLace the book name here</a></li>
+									<ul data-role="listview" data-filter="true" data-filter-reveal="true" data-filter-placeholder="Search">
+										<li><a href="#place the drive link here">Place the book name here</a></li>
 									</ul>
 								</div>
 								<div class="container">
