--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ textarea{
     border:none;
     user-select:none;
     border-radius:5px;
+    padding:6px 3px;
 }
 .send:active{
 background:var(--btn);
