--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ animation:pulse 0.05s forwards;
     <section id="two"> 
      <div class="container"> 
       <h2 class="animated zoomIn"><b>BOOKS</b></h2> 
-      <p>We are still updating the books, please us know if want any book to added</p> 
+      <p>We are still updating the books, please us know if want any book to added.You can mail us if you don't find a book or provide your mail id with the feedback form below so that we can contact you.</p> 
       <ul class="feature-icons"> 
        <li class="solid icon fa-book"> 
         <div class="dropdown"> 
