--- a/Chemistry Books.html
+++ b/Chemistry Books.html
@@ -26,7 +26,7 @@
 		}
 		#myInput
 		{
-			width: 1000px;
+			width: 1152px;
 			box-sizing: border-box;
 			background-position: 14px 12px;
 			background-repeat: no-repeat;
@@ -52,7 +52,7 @@
 			display: none;
 			position: absolute;
 			background-color: #f6f6f6;
-			width: 970px;
+			width: 1132px;
 			overflow: auto;
 			border: 1px solid #ddd;
 			box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -87,7 +87,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one"><p class="animated fadeInRight">Entrance</p></a></li>
-						<li><a href="#two"><p class="animated fadeInRight">CISC</p></a></li>
+						<li><a href="#two"><p class="animated fadeInRight">CISCE</p></a></li>
 						<li><a href="#three"><p class="animated fadeInRight">CBSE</p></a></li>
 						<li><a href="#four"><p class="animated fadeInLeft">Contact</p></a></li>
 					</ul>
@@ -127,8 +127,8 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>MS Chauhan Organic Chemistry 11th Edition</td>
-												<td><a href="https://drive.google.com/drive/folders/11qnhDZlqTQvg5FtDMhJJacA-QJsGYSvi?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Place the book name here</td>
+												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
@@ -139,7 +139,7 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3 class="animated zoomIn">CISC</h3>
+									<h3 class="animated zoomIn">CISCE</h3>
 									<div class="table-wrapper">
 										<table>
 											<thead>
@@ -173,16 +173,8 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>Class 12 Ncert Chemistry Part 1</td>
-												<td><a href="https://drive.google.com/drive/folders/1BRXJq02_0jFmnCh6Hi9ME8fqWa-lXoM1?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>Class 12 Ncert Chemistry Part 2</td>
-												<td><a href="https://drive.google.com/drive/folders/1ZJqO0N_MXBqzZNMONc9He3eIwrq0OZxp?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>Oswal Class 11 Mind Maps Of Each Chapter</td>
-												<td><a href="https://drive.google.com/file/d/1iF8r3r_vBjsMNh7Ola89Wty0E3YmmduT/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Place the book name here</td>
+												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
@@ -204,7 +196,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; CubeBooks 2021. All rights reserved.</li>
+								<li>&copy; CubeBooks 2022. All rights reserved.</li>
 							</ul>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
