--- a/Chemistry Notes.html
+++ b/Chemistry Notes.html
@@ -26,7 +26,7 @@
 		}
 		#myInput
 		{
-			width: 1000px;
+			width: 1152px;
 			box-sizing: border-box;
 			background-position: 14px 12px;
 			background-repeat: no-repeat;
@@ -52,7 +52,7 @@
 			display: none;
 			position: absolute;
 			background-color: #f6f6f6;
-			width: 970px;
+			width: 1132px;
 			overflow: auto;
 			border: 1px solid #ddd;
 			box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -86,9 +86,8 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one"><p class="animated fadeInRight">Organic Chemistry</p></a></li>
-						<li><a href="#two"><p class="animated fadeInLeft">Inorganic Chemistry</p></a></li>
-						<li><a href="#three"><p class="animated fadeInLeft">Physical Chemistry</p></a></li>
+						<li><a href="#one"><p class="animated fadeInRight">CICSE</p></a></li>
+						<li><a href="#two"><p class="animated fadeInLeft">CBSE</p></a></li>
 						<li><a href="#four"><p class="animated fadeInRight">Contact</p></a></li>
 					</ul>
 				</nav>
@@ -116,7 +115,7 @@
 								</div>
 							</div>
 							<div class="container">
-								<h3 class="animated zoomIn">Organic Chemistry</h3>
+								<h3 class="animated zoomIn">CISCE</h3>
 								<div class="table-wrapper">
 									<table>
 										<thead>
@@ -127,16 +126,8 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>Important Conversions In Organic Chemistry</td>
-												<td><a href="https://drive.google.com/file/d/1Z8jo9JxbzW1x0BrbK47xz0h1E-HS3IrA/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>51 Important Reactions You Can't Miss</td>
-												<td><a href="https://drive.google.com/file/d/1SH64hogNzHE9Yd3TkeJJ6pFKhsyYz3pm/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>Organic Reactions,Conversion And Mechanisms</td>
-												<td><a href="https://drive.google.com/file/d/1a1IoXBr3JcETSz5oYZvM_tyXKLCy0DdG/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Place the book name here</td>
+												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
@@ -147,34 +138,7 @@
 						<!--Two -->
 						<section id="two">
 							<div class="container">
-								<h3 class="animated zoomIn">Inorganic Chemistry</h3>
-								<div class="table-wrapper">
-									<table>
-										<thead>
-											<tr>
-												<th>Notes</th>
-												<th>Download</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>P Block Notes</td>
-												<td><a href="https://drive.google.com/file/d/1iF8r3r_vBjsMNh7Ola89Wty0E3YmmduT/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>Place the book name here</td>
-												<td><a href="" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
-							</div>
-						</section>
-
-						<!--Three -->
-						<section id="three">
-							<div class="container">
-								<h3 class="animated zoomIn">Physical Chemistry</h3>
+								<h3 class="animated zoomIn">CBSE</h3>
 								<div class="table-wrapper">
 									<table>
 										<thead>
@@ -207,7 +171,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; CubeBooks 2021. All rights reserved.</li>
+								<li>&copy; CubeBooks 2022. All rights reserved.</li>
 							</ul>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
