--- a/Computer Notes.html
+++ b/Computer Notes.html
@@ -26,7 +26,7 @@
 		}
 		#myInput
 		{
-			width: 1000px;
+			width: 1152px;
 			box-sizing: border-box;
 			background-position: 14px 12px;
 			background-repeat: no-repeat;
@@ -52,7 +52,7 @@
 			display: none;
 			position: absolute;
 			background-color: #f6f6f6;
-			width: 970px;
+			width: 1132px;
 			overflow: auto;
 			border: 1px solid #ddd;
 			box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -86,7 +86,7 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one"><p class="animated fadeInRight">CISC</p></a></li>
+						<li><a href="#one"><p class="animated fadeInRight">CICSE</p></a></li>
 						<li><a href="#two"><p class="animated fadeInLeft">CBSE</p></a></li>
 						<li><a href="#four"><p class="animated fadeInRight">Contact</p></a></li>
 					</ul>
@@ -115,7 +115,7 @@
 								</div>
 							</div>
 							<div class="container">
-								<h3 class="animated zoomIn">CISC</h3>
+								<h3 class="animated zoomIn">CISCE</h3>
 								<div class="table-wrapper">
 									<table>
 										<thead>
@@ -126,12 +126,8 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>K Maps Notes</td>
-												<td><a href="https://drive.google.com/file/d/1-Fhn5-JqoJtZJCifpszMNoH95zN6Ih49/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>Propositional Logic</td>
-												<td><a href="https://drive.google.com/file/d/1-CcQR2C3bUJCHZcLJ0Rx_RPbAy4DDaYk/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Place the book name here</td>
+												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
@@ -152,10 +148,6 @@
 											</tr>
 										</thead>
 										<tbody>
-											<tr>
-												<td>Class 12 All Chapters Last Minute Revision Notes</td>
-												<td><a href="https://drive.google.com/file/d/157WomfUFJh2EUAWuWkYC3fAnCp3InXNV/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
 											<tr>
 												<td>Place the book name here</td>
 												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
@@ -179,7 +171,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; CubeBooks 2021. All rights reserved.</li>
+								<li>&copy; CubeBooks 2022. All rights reserved.</li>
 							</ul>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
