--- a/Computer Papers.html
+++ b/Computer Papers.html
@@ -25,7 +25,7 @@
 		}
 		#myInput
 		{
-			width: 980px;
+			width: 1152px;
 			box-sizing: border-box;
 			background-position: 14px 12px;
 			background-repeat: no-repeat;
@@ -51,7 +51,7 @@
 			display: none;
 			position: absolute;
 			background-color: #f6f6f6;
-			width: 950px;
+			width: 1132px;
 			overflow: auto;
 			border: 1px solid #ddd;
 			box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -85,7 +85,7 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one"><p class="animated fadeInRight">CISC</p></a></li>
+						<li><a href="#one"><p class="animated fadeInRight">CISCE</p></a></li>
 						<li><a href="#two"><p class="animated fadeInRight">CBSE</p></a></li>
 						<li><a href="#four"><p class="animated fadeInLeft">Contact</p></a></li>
 					</ul>
@@ -114,7 +114,7 @@
 								</div>
 							</div>
 							<div class="container">
-								<h3 class="animated zoomIn">CISC</h3>
+								<h3 class="animated zoomIn">CISCE</h3>
 								<div class="table-wrapper">
 									<table>
 										<thead>
@@ -124,14 +124,6 @@
 											</tr>
 										</thead>
 										<tbody>
-											<tr>
-												<td>Class 12 Specimen Question Paper-1</td>
-												<td><a href="https://drive.google.com/file/d/1-InXsRcmzxWW3TnZcletxM5R-7HBD9hW/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>Class 12 Specimen Question Paper-2</td>
-												<td><a href="https://drive.google.com/file/d/1-IjUpu8fP3UNe29_O6VCcuu4i6nFt01u/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
 											<tr>
 												<td>Place the book name here</td>
 												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
@@ -156,12 +148,8 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>Oswal 15 Sample Question Paper Class 12</td>
-												<td><a href="https://drive.google.com/file/d/156Xgev2tUGmT5ZDNY0lW-J2g4CmKjfS4/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>Class 12 Questions Based on Ch1,Ch2 and Ch3</td>
-												<td><a href="https://drive.google.com/file/d/159irGMkMV_Fs4Y-H3WsKAJsuNzMwfqWS/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Place the book name here</td>
+												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
@@ -182,7 +170,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; CubeBooks 2021. All rights reserved.</li>
+								<li>&copy; CubeBooks 2022. All rights reserved.</li>
 							</ul>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
