--- a/Physics Papers.html
+++ b/Physics Papers.html
@@ -25,7 +25,7 @@
 		}
 		#myInput
 		{
-			width: 980px;
+			width: 1152px;
 			box-sizing: border-box;
 			background-position: 14px 12px;
 			background-repeat: no-repeat;
@@ -51,7 +51,7 @@
 			display: none;
 			position: absolute;
 			background-color: #f6f6f6;
-			width: 960px;
+			width: 1132px;
 			overflow: auto;
 			border: 1px solid #ddd;
 			box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -85,9 +85,9 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one"><p class="animated fadeInRight">Entrance</p></a></li>
+						<li><a href="#one"><p class="animated fadeInRight">CISCE</p></a></li>
 						<li><a href="#two"><p class="animated fadeInLeft">CBSE</p></a></li>
-						<li><a href="#three"><p class="animated fadeInRight">CISC</p></a></li>
+						<li><a href="#three"><p class="animated fadeInRight">Entrance</p></a></li>
 						<li><a href="#four"><p class="animated fadeInLeft">Contact</p></a></li>
 					</ul>
 				</nav>
@@ -115,7 +115,7 @@
 								</div>
 							</div>
 							<div class="container">
-								<h3 class="animated zoomIn">Entrance</h3>
+								<h3 class="animated zoomIn">CISCE</h3>
 								<div class="table-wrapper">
 									<table>
 										<thead>
@@ -126,16 +126,8 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>43 Years JEE Mains & Advance Solved Papers</td>
-												<td><a href="https://drive.google.com/file/d/10u8rs8Zmo8tTHDi-ZxaGO6Ve5MFgzth_/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>IIT JEE Papers Collection year-1978 to 2018</td>
-												<td><a href="https://drive.google.com/file/d/1KoxojnwiFGwfwT8jtNKwraf823FPEQIo/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>750 BlockBuster Problems In Physics For Jee Mains</td>
-												<td><a href="https://drive.google.com/file/d/10rr1dK6Ihl7cxSdDS8CaJk3k5WTrFI19/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Place the book name here</td>
+												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
@@ -157,12 +149,8 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>Scormore 21 sample paper physics</td>
-												<td><a href="https://drive.google.com/file/d/10kNEdTn2-v2mLUGfsOXK5dAp4jyJH_cL/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>Quick Revision Ncert ChapterWise Question Bank class 11 and 12</td>
-												<td><a href="https://drive.google.com/file/d/10n2GdJ7rD3mt_s2x948kAvMrFiwqQBnH/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Place the book name here</td>
+												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
@@ -173,7 +161,7 @@
 						<!--Three -->
 						<section id="three">
 							<div class="container">
-								<h3 class="animated zoomIn">CISC</h3>
+								<h3 class="animated zoomIn">Entrance</h3>
 								<div class="table-wrapper">
 									<table>
 										<thead>
@@ -184,8 +172,8 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>Place The Book Name Here</td>
-												<td><a href="#Place The Drive Link Here" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Place the book name here</td>
+												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
@@ -206,7 +194,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; CubeBooks 2021. All rights reserved.</li>
+								<li>&copy; CubeBooks 2022. All rights reserved.</li>
 							</ul>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
