--- a/Commerce Papers.html
+++ b/Commerce Papers.html
@@ -114,7 +114,7 @@
 								</div>
 							</div>
 							<div class="container">
-								<h3 class="animated zoomIn">CISC</h3>
+								<h3 class="animated zoomIn">CISCE</h3>
 								<div class="table-wrapper">
 									<table>
 										<thead>
