--- a/Chemistry Papers.html
+++ b/Chemistry Papers.html
@@ -255,20 +255,30 @@
 								</div>
 							</div>
 						</section>
+
+						<!-- Four --> 
+						<section id="four"> 
+							<div class="container"> 
+							<h3>Contact Us</h3> 
+							<textarea placeholder="Enter your message"></textarea> 
+							<input type="text" class="name" placeholder="Full Name"> 
+							<input type="text" class="email" placeholder="Email"/>
+							<button class="send" onclick="sendReq()">send</button> 
+							</div> 
+						</section> 
+						</div>
 				
-						<!-- Footer -->
-						<section id="footer">
-							<div class="container">
-								<ul class="copyright">
-									<li>&copy; CubeBooks 2022. All rights reserved.</li>
-								</ul>
-								<ul class="icons">
-									<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://www.instagram.com/cubebooks/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="mailto:cubebooks.netlify@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</div>
-						</section>
+						<!-- Four --> 
+						<section id="four"> 
+							<div class="container"> 
+							<h3>Contact Us</h3> 
+							<textarea placeholder="Enter your message"></textarea> 
+							<input type="text" class="name" placeholder="Full Name"> 
+							<input type="text" class="email" placeholder="Email"/>
+							<button class="send" onclick="sendReq()">send</button> 
+							</div> 
+						</section> 
+						</div>
 
 					</div>
 
