--- a/Mathematics Books.html
+++ b/Mathematics Books.html
@@ -162,7 +162,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one"><p class="animated fadeInRight">Entrance</p></a></li>
-						<li><a href="#two"><p class="animated fadeInRight">CISCE</p></a></li>
+						<li><a href="#two"><p class="animated fadeInLeftt">CISCE</p></a></li>
 						<li><a href="#three"><p class="animated fadeInRight">CBSE</p></a></li>
 						<li><a href="#four"><p class="animated fadeInLeft">Contact</p></a></li>
 					</ul>
@@ -258,19 +258,17 @@
 						</section>
 
 						
-						<!-- Footer -->
-						<section id="footer">
-							<div class="container">
-								<ul class="copyright">
-									<li>&copy; CubeBooks 2022. All rights reserved.</li>
-								</ul>
-								<ul class="icons">
-									<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://www.instagram.com/cubebooks/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="mailto:cubebooks.netlify@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</div>
-						</section>
+						<!-- Four --> 
+						<section id="four"> 
+							<div class="container"> 
+							<h3>Contact Us</h3> 
+							<textarea placeholder="Enter your message"></textarea> 
+							<input type="text" class="name" placeholder="Full Name"> 
+							<input type="text" class="email" placeholder="Email"/>
+							<button class="send" onclick="sendReq()">send</button> 
+							</div> 
+						</section> 
+						</div>
 
 					</div>
 
