--- a/Physics Books.html
+++ b/Physics Books.html
@@ -188,6 +188,7 @@
 							<input type="text" onclick="myFunction()" class="dropbtn" placeholder="Search Here....." id="myInput" onkeyup="filterFunction()">
 								<div id="myDropdown" class="dropdown-content">
 									<a href="https://drive.google.com/drive/folders/1-2zU7UrmY_OM1Yb6qma-V3-axCmIcPAt?usp=sharing">D.C. Pandey</a>
+									<a href="https://drive.google.com/drive/folders/10s9NNxtRH7cm3BJQgksSrcnPOPYuyvZh?usp=sharing">I.E. Irodov With Solution</a>
 								</div>
 							</div>
 							<div class="container">
@@ -204,6 +205,11 @@
 											<tr>
 												<td>D.C. Pandey</td>
 												<td><a href="https://drive.google.com/drive/folders/1-2zU7UrmY_OM1Yb6qma-V3-axCmIcPAt?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											
+											<tr>
+												<td>I.E. Irodov With Solution</td>
+												<td><a href="https://drive.google.com/drive/folders/10s9NNxtRH7cm3BJQgksSrcnPOPYuyvZh?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
