--- a/Physics Books.html
+++ b/Physics Books.html
@@ -189,6 +189,8 @@
 								<div id="myDropdown" class="dropdown-content">
 									<a href="https://drive.google.com/drive/folders/1-2zU7UrmY_OM1Yb6qma-V3-axCmIcPAt?usp=sharing">D.C. Pandey</a>
 									<a href="https://drive.google.com/drive/folders/10s9NNxtRH7cm3BJQgksSrcnPOPYuyvZh?usp=sharing">I.E. Irodov With Solution</a>
+									<a href="https://drive.google.com/drive/folders/1vfxteJsRwhDZXetdjs6AFZCNuzR6qg-k?usp=sharing">Physics Galaxy By Ashish Arora</a>
+									<a href="https://drive.google.com/drive/folders/1QyjRNldO47selwqJEt9QG_1kaagGNO47?usp=sharing">S.L. Arora Volume 1 And Volume 2</a>
 								</div>
 							</div>
 							<div class="container">
@@ -210,6 +212,14 @@
 											<tr>
 												<td>I.E. Irodov With Solution</td>
 												<td><a href="https://drive.google.com/drive/folders/10s9NNxtRH7cm3BJQgksSrcnPOPYuyvZh?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Physics Galaxy By Ashish Arora</td>
+												<td><a href="https://drive.google.com/drive/folders/1vfxteJsRwhDZXetdjs6AFZCNuzR6qg-k?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>S.L. Arora Volume 1 and Volume 2</td>
+												<td><a href="https://drive.google.com/drive/folders/1QyjRNldO47selwqJEt9QG_1kaagGNO47?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
@@ -254,8 +264,12 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>place book name here</td>
-												<td><a href="place drive link here" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Modern ABC Class 12</td>
+												<td><a href="https://drive.google.com/drive/folders/1Qd8T00ClBWyqzgYl0wtJb45jrsJwJIrc?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Modern ABC Class 11</td>
+												<td><a href="https://drive.google.com/drive/folders/1Db6PWVOECAx-VKti3dGDvBpxlcarEhpR?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
