--- a/Physics Books.html
+++ b/Physics Books.html
@@ -221,6 +221,14 @@
 												<td>S.L. Arora Volume 1 and Volume 2</td>
 												<td><a href="https://drive.google.com/drive/folders/1QyjRNldO47selwqJEt9QG_1kaagGNO47?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
+											<tr>
+												<td>Resnick And Haliday</td>
+												<td><a href="https://drive.google.com/file/d/11lv8jOqmwInJDymd6u8VEV2JgQdwWmBn/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Arihant HandBook For Class 11,12 and Jee/Neet</td>
+												<td><a href="https://drive.google.com/file/d/11pNNpAWHsSDZ_2ryoZ7SRkEpXbs4ZcQ-/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
 										</tbody>
 									</table>
 								</div>
@@ -270,6 +278,18 @@
 											<tr>
 												<td>Modern ABC Class 11</td>
 												<td><a href="https://drive.google.com/drive/folders/1Db6PWVOECAx-VKti3dGDvBpxlcarEhpR?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Term 1 Class 12 All Books</td>
+												<td><a href="https://drive.google.com/drive/folders/1sgKhZdWVg-XPd99sFGknBa5LYFyfUET5?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Master The Ncert Class 11&12</td>
+												<td><a href="https://drive.google.com/drive/folders/1QilRCOMnxkMilISg9pwaM0754eKPmRUN?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Ncert Physics Class 11&12</td>
+												<td><a href="https://drive.google.com/drive/folders/1M6U6Zmwa9suFYJEAP_NUiPx3zEVHUfl_?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
