--- a/Physics Books.html
+++ b/Physics Books.html
@@ -62,9 +62,38 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>Place the book name here</td>
-												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
+                                                                                                <td>D.C. Pandey</td>
+                                                                                                <td><a href="https://drive.google.com/drive/folders/1-2zU7UrmY_OM1Yb6qma-V3-axCmIcPAt?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+                                                                                        </tr>
+                      
+                                                                                        <tr>
+                                                                                                <td>I.E. Irodov With Solution</td>
+                                                                                                <td><a href="https://drive.google.com/drive/folders/10s9NNxtRH7cm3BJQgksSrcnPOPYuyvZh?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+                                                                                        </tr>
+                                                                                        <tr>
+                                                                                                <td>Physics Galaxy By Ashish Arora</td>
+                                                                                                <td><a href="https://drive.google.com/drive/folders/1vfxteJsRwhDZXetdjs6AFZCNuzR6qg-k?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+                                                                                        </tr>
+                                                                                        <tr>
+                                                                                                <td>S.L. Arora Volume 1 and Volume 2</td>
+                                                                                                <td><a href="https://drive.google.com/drive/folders/1QyjRNldO47selwqJEt9QG_1kaagGNO47?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+                                                                                        </tr>
+                                                                                        <tr>
+                                                                                                <td>Resnick And Haliday</td>
+                                                                                                <td><a href="https://drive.google.com/file/d/11lv8jOqmwInJDymd6u8VEV2JgQdwWmBn/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+                                                                                        </tr>
+                                                                                        <tr>
+                                                                                                <td>Arihant HandBook For Class 11,12 and Jee/Neet</td>
+                                                                                                <td><a href="https://drive.google.com/file/d/11pNNpAWHsSDZ_2ryoZ7SRkEpXbs4ZcQ-/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+                                                                                        </tr>
+											<tr>
+                                                                                                <td>H.C. Verma</td>
+                                                                                                <td><a href="https://drive.google.com/drive/folders/1CHMbDH_isVdsIOnshSMWwyyynO2oiV8P?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+                                                                                        </tr>
+											<tr>
+                                                                                                <td>D.C. Pandey Last Minute Prepration for Jee/Neet/11/12</td>
+                                                                                                <td><a href="https://drive.google.com/file/d/1XM-qGqSj_zGJC9n1CYnCfPJRYDSkyaDt/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+                                                                                        </tr>
 										</tbody>
 										<br>	
 										<thead section id="two">
@@ -86,9 +115,25 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>Place the book name here</td>
-												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
+                                                                                                <td>Modern ABC Class 12</td>
+                                                                                                <td><a href="https://drive.google.com/drive/folders/1Qd8T00ClBWyqzgYl0wtJb45jrsJwJIrc?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+                                                                                        </tr>
+                                                                                        <tr>
+                                                                                                <td>Modern ABC Class 11</td>
+                                                                                                <td><a href="https://drive.google.com/drive/folders/1Db6PWVOECAx-VKti3dGDvBpxlcarEhpR?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+                                                                                        </tr>
+                                                                                        <tr>
+                                                                                                <td>Term 1 Class 12 All Books</td>
+                                                                                                <td><a href="https://drive.google.com/drive/folders/1sgKhZdWVg-XPd99sFGknBa5LYFyfUET5?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+                                                                                        </tr>
+                                                                                        <tr>
+                                                                                                <td>Master The Ncert Class 11&12</td>
+                                                                                                <td><a href="https://drive.google.com/drive/folders/1QilRCOMnxkMilISg9pwaM0754eKPmRUN?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+                                                                                        </tr>
+                                                                                        <tr>
+                                                                                                <td>Ncert Physics Class 11&12</td>
+                                                                                                <td><a href="https://drive.google.com/drive/folders/1M6U6Zmwa9suFYJEAP_NUiPx3zEVHUfl_?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+                                                                                        </tr>
 										</tbody>
 									</table>
 								</div>
